lib/src/duckdb_bindings.dart


  duckdb_date_struct duckdb_from_date(
    duckdb_date date,
  ) {
    return _duckdb_from_date(
      date,
    );
  }

  late final _duckdb_from_datePtr =
      _lookup<ffi.NativeFunction<duckdb_date_struct Function(duckdb_date)>>(
          'duckdb_from_date');
  late final _duckdb_from_date = _duckdb_from_datePtr
      .asFunction<duckdb_date_struct Function(duckdb_date)>();

  duckdb_date duckdb_to_date(
    duckdb_date_struct date,
  ) {
    return _duckdb_to_date(
      date,
    );
  }

  late final _duckdb_to_datePtr =
      _lookup<ffi.NativeFunction<duckdb_date Function(duckdb_date_struct)>>(
          'duckdb_to_date');
  late final _duckdb_to_date =
      _duckdb_to_datePtr.asFunction<duckdb_date Function(duckdb_date_struct)>();

  duckdb_time_struct duckdb_from_time(
    duckdb_time time,
  ) {
    return _duckdb_from_time(
      time,
    );
  }

  late final _duckdb_from_timePtr =
      _lookup<ffi.NativeFunction<duckdb_time_struct Function(duckdb_time)>>(
          'duckdb_from_time');
  late final _duckdb_from_time = _duckdb_from_timePtr
      .asFunction<duckdb_time_struct Function(duckdb_time)>();

  duckdb_time duckdb_to_time(
    duckdb_time_struct time,
  ) {
    return _duckdb_to_time(
      time,
    );
  }

  late final _duckdb_to_timePtr =
      _lookup<ffi.NativeFunction<duckdb_time Function(duckdb_time_struct)>>(
          'duckdb_to_time');
  late final _duckdb_to_time =
      _duckdb_to_timePtr.asFunction<duckdb_time Function(duckdb_time_struct)>();

  duckdb_timestamp_struct duckdb_from_timestamp(
    duckdb_timestamp ts,
  ) {
    return _duckdb_from_timestamp(
      ts,
    );
  }

  late final _duckdb_from_timestampPtr = _lookup<
      ffi.NativeFunction<
          duckdb_timestamp_struct Function(
              duckdb_timestamp)>>('duckdb_from_timestamp');
  late final _duckdb_from_timestamp = _duckdb_from_timestampPtr
      .asFunction<duckdb_timestamp_struct Function(duckdb_timestamp)>();

  duckdb_timestamp duckdb_to_timestamp(
    duckdb_timestamp_struct ts,
  ) {
    return _duckdb_to_timestamp(
      ts,
    );
  }

  late final _duckdb_to_timestampPtr = _lookup<
      ffi.NativeFunction<
          duckdb_timestamp Function(
              duckdb_timestamp_struct)>>('duckdb_to_timestamp');
  late final _duckdb_to_timestamp = _duckdb_to_timestampPtr
      .asFunction<duckdb_timestamp Function(duckdb_timestamp_struct)>();

  double duckdb_hugeint_to_double(
    duckdb_hugeint val,
  ) {
    return _duckdb_hugeint_to_double(
      val,
    );
  }

  late final _duckdb_hugeint_to_doublePtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(duckdb_hugeint)>>(
          'duckdb_hugeint_to_double');
  late final _duckdb_hugeint_to_double = _duckdb_hugeint_to_doublePtr
      .asFunction<double Function(duckdb_hugeint)>();

  duckdb_hugeint duckdb_double_to_hugeint(
    double val,
  ) {
    return _duckdb_double_to_hugeint(
      val,
    );
  }

  late final _duckdb_double_to_hugeintPtr =
      _lookup<ffi.NativeFunction<duckdb_hugeint Function(ffi.Double)>>(
          'duckdb_double_to_hugeint');
  late final _duckdb_double_to_hugeint = _duckdb_double_to_hugeintPtr
      .asFunction<duckdb_hugeint Function(double)>();

  duckdb_decimal duckdb_double_to_decimal(
    double val,
    int width,
    int scale,
  ) {
    return _duckdb_double_to_decimal(
      val,
      width,
      scale,
    );
  }

  late final _duckdb_double_to_decimalPtr = _lookup<
      ffi.NativeFunction<
          duckdb_decimal Function(
              ffi.Double, ffi.Uint8, ffi.Uint8)>>('duckdb_double_to_decimal');
  late final _duckdb_double_to_decimal = _duckdb_double_to_decimalPtr
      .asFunction<duckdb_decimal Function(double, int, int)>();

  double duckdb_decimal_to_double(
    duckdb_decimal val,
  ) {
    return _duckdb_decimal_to_double(
      val,
    );
  }

  late final _duckdb_decimal_to_doublePtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(duckdb_decimal)>>(
          'duckdb_decimal_to_double');
  late final _duckdb_decimal_to_double = _duckdb_decimal_to_doublePtr
      .asFunction<double Function(duckdb_decimal)>();

  int duckdb_prepare(
    duckdb_connection connection,
    ffi.Pointer<ffi.Char> query,
    ffi.Pointer<duckdb_prepared_statement> out_prepared_statement,
  ) {
    return _duckdb_prepare(
      connection,
      query,
      out_prepared_statement,
    );
  }

  late final _duckdb_preparePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_connection, ffi.Pointer<ffi.Char>,
              ffi.Pointer<duckdb_prepared_statement>)>>('duckdb_prepare');
  late final _duckdb_prepare = _duckdb_preparePtr.asFunction<
      int Function(duckdb_connection, ffi.Pointer<ffi.Char>,
          ffi.Pointer<duckdb_prepared_statement>)>();

  void duckdb_destroy_prepare(
    ffi.Pointer<duckdb_prepared_statement> prepared_statement,
  ) {
    return _duckdb_destroy_prepare(
      prepared_statement,
    );
  }

  late final _duckdb_destroy_preparePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<duckdb_prepared_statement>)>>(
      'duckdb_destroy_prepare');
  late final _duckdb_destroy_prepare = _duckdb_destroy_preparePtr
      .asFunction<void Function(ffi.Pointer<duckdb_prepared_statement>)>();

  ffi.Pointer<ffi.Char> duckdb_prepare_error(
    duckdb_prepared_statement prepared_statement,
  ) {
    return _duckdb_prepare_error(
      prepared_statement,
    );
  }

  late final _duckdb_prepare_errorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              duckdb_prepared_statement)>>('duckdb_prepare_error');
  late final _duckdb_prepare_error = _duckdb_prepare_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(duckdb_prepared_statement)>();

  int duckdb_nparams(
    duckdb_prepared_statement prepared_statement,
  ) {
    return _duckdb_nparams(
      prepared_statement,
    );
  }

  late final _duckdb_nparamsPtr =
      _lookup<ffi.NativeFunction<idx_t Function(duckdb_prepared_statement)>>(
          'duckdb_nparams');
  late final _duckdb_nparams =
      _duckdb_nparamsPtr.asFunction<int Function(duckdb_prepared_statement)>();

  int duckdb_param_type(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
  ) {
    return _duckdb_param_type(
      prepared_statement,
      param_idx,
    );
  }

  late final _duckdb_param_typePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              duckdb_prepared_statement, idx_t)>>('duckdb_param_type');
  late final _duckdb_param_type = _duckdb_param_typePtr
      .asFunction<int Function(duckdb_prepared_statement, int)>();

  int duckdb_clear_bindings(
    duckdb_prepared_statement prepared_statement,
  ) {
    return _duckdb_clear_bindings(
      prepared_statement,
    );
  }

  late final _duckdb_clear_bindingsPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(duckdb_prepared_statement)>>(
      'duckdb_clear_bindings');
  late final _duckdb_clear_bindings = _duckdb_clear_bindingsPtr
      .asFunction<int Function(duckdb_prepared_statement)>();

  int duckdb_bind_boolean(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    bool val,
  ) {
    return _duckdb_bind_boolean(
      prepared_statement,
      param_idx,
      val,
    );
  }

  late final _duckdb_bind_booleanPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement, idx_t,
              ffi.Bool)>>('duckdb_bind_boolean');
  late final _duckdb_bind_boolean = _duckdb_bind_booleanPtr
      .asFunction<int Function(duckdb_prepared_statement, int, bool)>();

  int duckdb_bind_int8(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    int val,
  ) {
    return _duckdb_bind_int8(
      prepared_statement,
      param_idx,
      val,
    );
  }

  late final _duckdb_bind_int8Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              duckdb_prepared_statement, idx_t, ffi.Int8)>>('duckdb_bind_int8');
  late final _duckdb_bind_int8 = _duckdb_bind_int8Ptr
      .asFunction<int Function(duckdb_prepared_statement, int, int)>();

  int duckdb_bind_int16(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    int val,
  ) {
    return _duckdb_bind_int16(
      prepared_statement,
      param_idx,
      val,
    );
  }

  late final _duckdb_bind_int16Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement, idx_t,
              ffi.Int16)>>('duckdb_bind_int16');
  late final _duckdb_bind_int16 = _duckdb_bind_int16Ptr
      .asFunction<int Function(duckdb_prepared_statement, int, int)>();

  int duckdb_bind_int32(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    int val,
  ) {
    return _duckdb_bind_int32(
      prepared_statement,
      param_idx,
      val,
    );
  }

  late final _duckdb_bind_int32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement, idx_t,
              ffi.Int32)>>('duckdb_bind_int32');
  late final _duckdb_bind_int32 = _duckdb_bind_int32Ptr
      .asFunction<int Function(duckdb_prepared_statement, int, int)>();

  int duckdb_bind_int64(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    int val,
  ) {
    return _duckdb_bind_int64(
      prepared_statement,
      param_idx,
      val,
    );
  }

  late final _duckdb_bind_int64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement, idx_t,
              ffi.Int64)>>('duckdb_bind_int64');
  late final _duckdb_bind_int64 = _duckdb_bind_int64Ptr
      .asFunction<int Function(duckdb_prepared_statement, int, int)>();

  int duckdb_bind_hugeint(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    duckdb_hugeint val,
  ) {
    return _duckdb_bind_hugeint(
      prepared_statement,
      param_idx,
      val,
    );
  }

  late final _duckdb_bind_hugeintPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement, idx_t,
              duckdb_hugeint)>>('duckdb_bind_hugeint');
  late final _duckdb_bind_hugeint = _duckdb_bind_hugeintPtr.asFunction<
      int Function(duckdb_prepared_statement, int, duckdb_hugeint)>();

  int duckdb_bind_decimal(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    duckdb_decimal val,
  ) {
    return _duckdb_bind_decimal(
      prepared_statement,
      param_idx,
      val,
    );
  }

  late final _duckdb_bind_decimalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement, idx_t,
              duckdb_decimal)>>('duckdb_bind_decimal');
  late final _duckdb_bind_decimal = _duckdb_bind_decimalPtr.asFunction<
      int Function(duckdb_prepared_statement, int, duckdb_decimal)>();

  int duckdb_bind_uint8(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    int val,
  ) {
    return _duckdb_bind_uint8(
      prepared_statement,
      param_idx,
      val,
    );
  }

  late final _duckdb_bind_uint8Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement, idx_t,
              ffi.Uint8)>>('duckdb_bind_uint8');
  late final _duckdb_bind_uint8 = _duckdb_bind_uint8Ptr
      .asFunction<int Function(duckdb_prepared_statement, int, int)>();

  int duckdb_bind_uint16(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    int val,
  ) {
    return _duckdb_bind_uint16(
      prepared_statement,
      param_idx,
      val,
    );
  }

  late final _duckdb_bind_uint16Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement, idx_t,
              ffi.Uint16)>>('duckdb_bind_uint16');
  late final _duckdb_bind_uint16 = _duckdb_bind_uint16Ptr
      .asFunction<int Function(duckdb_prepared_statement, int, int)>();
